# beamline-caf

./: .gitignore  README.md
.ai/: architecture.md  current_state.md  decisions.md  glossary.md  project.md
.ai/task_caf_nats_implementation/: progress.md  task.md
.ai/task_caf_router_integration_validation/: progress.md  task.md
ingress/src/: ingress_observability_stub.cpp  ingress_observability_stub.hpp
processor/: CMakeLists.txt  README.md
processor/alerts/: worker-alerts.yml
processor/dashboards/: worker-observability.json
processor/docs/: ARCHITECTURE_ROLE.md  CP1_WORKER_CORE_PROFILE.md  OBSERVABILITY.md  OBSERVABILITY_DASHBOARD.md  PRODUCTION_LOGGING.md
processor/docs/dev/: WRK3_WAVE1_AUDIT.md  WRK3_WAVE1_IMPLEMENTATION_REPORT.md
processor/include/beamline/worker/: actors.hpp  base_block_executor.hpp  core.hpp  feature_flags.hpp  ingress_actor.hpp  observability.hpp  result_converter.hpp  retry_policy.hpp  timeout_enforcement.hpp
processor/include/beamline/worker/blocks/: fs_block.hpp  http_block.hpp
processor/include/worker/: block_executor.hpp  types.hpp
processor/scripts/: benchmark_observability.sh  generate_coverage.sh
processor/src/: block_executor.cpp  ingress_actor.cpp  main.cpp  observability.cpp  sandbox.cpp  scheduler.cpp  worker_actor.cpp
processor/src/blocks/: fs_block.cpp  http_block.cpp  human_block.cpp  sql_block.cpp
processor/src/executors/: fs_blob_get_executor.cpp  fs_blob_put_executor.cpp  http_request_executor.cpp  human_approval_executor.cpp  sql_query_executor.cpp
processor/src/runtime/: actor_pools.hpp  scheduler.cpp
processor/tests/: CMakeLists.txt  README.md  test_block_executor.cpp  test_core.cpp  test_health_endpoint.cpp  test_observability.cpp  test_observability_performance.cpp  test_worker_router_contract.cpp
